argocd/examples/nextjs/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  labels:
    app: nextjs-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nextjs-app
